fixed compose button on mobile view

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -25,6 +25,8 @@ nav {
 
 #compose {
   float: right;
+  position: fixed;
+  right: -150px;
   padding-right: 10em;
   padding-top: 5px;
   height: 70px;
